--- a/css/stlye.css
+++ b/css/stlye.css
@@ -156,7 +156,33 @@ header {
     line-height: 35px;
     font-weight: 500;
     text-align: center;
-  }
+}
+.swiper-button-next:after,.swiper-button-prev:after {
+    color: #001e42;
+    font-size: 30px;
+    font-weight: 900;
+}
+.swiper-button-next,.swiper-button-prev {
+    top: auto;
+    bottom: 70px;
+    right: 240px;
+}
+.swiper-button-prev {
+    
+    left: auto;
+    right: 330px;
+}
+.swiper-scrollbar {
+    background: #f1f1f1;
+}
+.swiper-horizontal>.swiper-scrollbar, .swiper-scrollbar.swiper-scrollbar-horizontal {
+    width: 65%;
+    left: 230px;
+    bottom: 90px;
+}
+.swiper-scrollbar-drag {
+    background: var(--primary-font-color);
+}
 
 /* 콘텐츠1 부분 */
 #content1 {
@@ -247,11 +273,3 @@ header {
     font-weight: 300;
 }
 
-.swiper-button-next:after,.swiper-button-prev:after {
-    display: none;
-}
-.swiper-button-next,.swiper-button-prev {
-    background-color: red;
-    top: auto;
-    bottom: 0;
-}
