--- a/css/stlye.css
+++ b/css/stlye.css
@@ -54,6 +54,10 @@ header {
     font-size: 9px;
     font-weight: 500;
 }
+.header-top ul li:hover a{
+    font-size: 10.5px;
+    font-weight: 600;
+}
 .header-top ul li:last-child {
     border: none;
     padding-right: 0;
@@ -93,52 +97,55 @@ header {
     border-radius: 25px;
     background-color: var(--premary-color);
     display: flex;
+    align-items: center;
 }
 #search img {
     width: 15px;
     height: 15px;
-    margin: 5px 15px;
+    margin: auto 15px;
+}
+
+#search p {
+    font-size: 14px;
 }
 
 /* 메인 슬라이드부분 */
-.swiper {
+#main-slide {
     width: 100%;
     height: 750px;
-  }
-
-  .swiper-slide {
+}
+#main-slide .swiper-slide {
     width: 100%;
     height: 100%;
     font-size: 18px;
-    background: #ffbebe;
     color: var(--primary-font-color);
   }
-  .swiper-slide:nth-child(1) {
+  #main-slide .swiper-slide:nth-child(1) {
     background-image: url(../img/main-page/main-slide/slide1.jpg);
   }
-  .swiper-slide:nth-child(2) {
+  #main-slide  .swiper-slide:nth-child(2) {
     background-image: url(../img/main-page/main-slide/slide2.jpg);
   }
-  .swiper-slide:nth-child(3) {
+  #main-slide  .swiper-slide:nth-child(3) {
     background-image: url(../img/main-page/main-slide/slide3.jpg);
   }
-  .swiper-slide:nth-child(4) {
+  #main-slide  .swiper-slide:nth-child(4) {
     background-image: url(../img/main-page/main-slide/slide4.jpg);
   }
-  .swiper-slide:nth-child(5) {
+  #main-slide  .swiper-slide:nth-child(5) {
     background-image: url(../img/main-page/main-slide/slide5.jpg);
   }
 
-  .swiper-slide h2 {
+ .swiper-slide h2 {
     font-size: 70px;
-    margin-top: 380px;
+    margin-top: 400px;
     margin-left: 240px;
   }
-  .swiper-slide > p {
+ .swiper-slide > p {
     font-size: 25px;
     margin-left: 240px;
   }
-  .slide-button {
+   .slide-button {
     width: 190px;
     height: 35px;
     background-color: #fff;
@@ -164,11 +171,10 @@ header {
 }
 .swiper-button-next,.swiper-button-prev {
     top: auto;
-    bottom: 70px;
+    bottom: 100px;
     right: 240px;
 }
 .swiper-button-prev {
-    
     left: auto;
     right: 330px;
 }
@@ -178,7 +184,7 @@ header {
 .swiper-horizontal>.swiper-scrollbar, .swiper-scrollbar.swiper-scrollbar-horizontal {
     width: 65%;
     left: 230px;
-    bottom: 90px;
+    bottom: 120px;
 }
 .swiper-scrollbar-drag {
     background: var(--primary-font-color);
