--- a/css/stlye.css
+++ b/css/stlye.css
@@ -225,6 +225,7 @@ header {
 }
 
 #content2 {
+    overflow: hidden;
     width: 100%;
     height: 390px;
     margin-top: 95px;
@@ -277,4 +278,36 @@ header {
     font-size: 22px;
     font-weight: 300;
 }
-
+#content3 {
+    width: 100%; 
+    height: 610px;
+    background-color: pink;
+    margin-top: 60px;
+}
+.content3-inner {
+    width: 100%;
+    height: 535px;
+    margin-top: 5px;
+}
+.content3-inner ul {
+    display: flex;
+    justify-content: space-between;
+}
+.content3-inner ul li {
+    width: 380px;
+    text-align: center;
+}
+.content3-inner ul li > img {
+    width: 100%;
+}
+.content3-img {
+    text-align: left;
+    display: flex;
+    gap: 10px;
+}
+.content3-img:nth-child(3) {
+    margin-top: 10px;
+}
+.content3-img:nth-child(4), .content3-img:nth-child(5) {
+    margin-top: 12px;
+}
